UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Bid_Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bid Action Items</relationshipLabel>
        <relationshipName>Bid_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Bid Action Items</relationshipLabel>
        <relationshipName>Bid_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Name__c</fullName>
        <label>Bid Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Number</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Bid Action Items</relationshipLabel>
        <relationshipName>Bid_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_DRL_Units1__c</fullName>
        <label>Final DRL Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_GCN_Generic_Code_Number__c</fullName>
        <label>GCN (Generic Code Number)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_GCN_Sequence_Number__c</fullName>
        <label>GCN Sequence Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_GPI_Generic_Product_Identifier__c</fullName>
        <label>GPI (Generic Product Identifier)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Code_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Code Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_11__c</fullName>
        <label>NDC 11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Pkg_Size__c</fullName>
        <label>Pkg Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Director__c</fullName>
        <label>Product Director</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bid Action Items</relationshipLabel>
        <relationshipName>Bid_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Strength__c</fullName>
        <label>Strength</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bid Action Item</label>
    <nameField>
        <displayFormat>Action Item-{0000}</displayFormat>
        <label>Bid Action Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Action Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>